# key_interceptor

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp  select_linux_device.cpp  select_linux_device.hpp
src/input/linux_input_adapter/: linux_input_adapter.cpp  linux_input_adapter.hpp  sbpt.ini
